fix：增加章节的接口
