# routes/geekApi.go
@@ -12,4 +12,6 @@ func GeekApi(v1 *gin.RouterGroup) {
 	v1.GET("/geek/GetCourseType", Wrapper(geek.GetGeekCourseType))
 
 	v1.POST("/geek/GetGeekCourse", Wrapper(geek.GetGeekCourse))
+
+	v1.POST("/geek/GetGeekArticle", Wrapper(geek.GetGeekArticle))
 }
